@@ -8,6 +8,7 @@ This change log contains a list of completed to-do's (new features, bug fixes, r
 (2011-09-xx)
 
 * Fixed compatibility fallback in Parameter::getDescription.
+* Fixed handling of list parameters in ParameterInput.
 
 === Validator 0.4.10 ===
 (2011-08-04)
